reworked the jumping links to make them, jump to the correct part of page

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -102,6 +102,7 @@ footer a {
     main,
     nav,
     footer {
+        display: flex;
         flex-direction: column;
     }
     aside {
@@ -120,6 +121,10 @@ footer a {
     main,
     nav,
     footer {
+        display: flex;
         flex-direction: column;
+    }
+    aside {
+        order: 2;
     }
 }
